# vaultic

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix  shell.nix
.claude/: settings.json
.claude/commands/: build.md  test.md  workflow-test.md
.github/workflows/: ci.yml  release.yml
demos/: demo-features.sh  demo-generate.sh  demo-quickstart.sh  features.cast  generate.cast  quickstart.cast
src/: export.rs  import.rs  lib.rs  main.rs
src/ai/: mod.rs
src/cli/: mod.rs
src/crypto/: mod.rs
src/fido2/: mod.rs
src/gpg/: mod.rs
src/models/: mod.rs
src/session/: mod.rs
src/sharing/: mod.rs
src/storage/: mod.rs
src/totp/: mod.rs
src/tui/: mod.rs
tests/: integration_tests.rs
web/: index.html
